<resources>

    <string name="app_name">全影</string>
    <string name="app_name2">全影网</string>

    <!-- 登录界面 -->
    <string name="login_username">手机号/账号</string>
    <string name="login_password">密码</string>
    <string name="login_forgetpassword">忘记密码</string>
    <string name="login_regist">账号注册</string>
    <string name="login_button">登录</string>
    <string name="regist_personage">个人账号注册</string>
    <string name="regist_company">企业账号注册</string>

    <!-- 忘记密码界面 -->
    <string name="forget_tel">手机号</string>
    <string name="forget_newpwd">新密码</string>
    <string name="forget_verification_code">验证码</string>
    <string name="forget_check_get">点击获取</string>
    <string name="forget_finish">完成</string>

    <!-- 首页 -->
    <string name="home_title1">首页</string>
    <string name="home_title2">人才</string>
    <string name="home_title4">消息</string>
    <string name="home_title3">展厅</string>
    <string name="home_title5">我的</string>

    <!-- 首页 -> 个人中心界面 -->
    <string name="nav_title5_item1">主页</string>
    <string name="nav_title5_item2">作品收藏</string>
    <string name="nav_title5_item3">我的关注</string>
    <string name="nav_title5_item4">我的粉丝</string>
    <string name="nav_title5_item5">会员中心</string>
    <string name="nav_title5_item6">设置</string>

    <!-- 修改密码界面 -->
    <string name="changepassword_changepwd">修改密码</string>
    <string name="changepassword_oldpwd">原始密码</string>
    <string name="changepassword_newpwd">新密码</string>
    <string name="changepassword_againpwd">确认密码</string>
    <string name="changepassword_finish">确认修改</string>

    <!-- 设置界面 -->
    <string name="setting_title">设置</string>
    <string name="setting_item1">账户与安全</string>
    <string name="setting_item2">消息通知</string>
    <string name="setting_item3">清除缓存</string>
    <string name="setting_item4">关于我们</string>
    <string name="setting_outuser">退出登录</string>

    <!-- 账户与安全 -->
    <string name="accountsafe_title">账户与安全</string>
    <string name="accountsafe_changepwd">修改密码</string>
    <string name="accountsafe_updatephonenub">更换绑定手机号</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_page">HomePageActivity</string>

    <!-- 手机绑定 -->
    <string name="bindphone_title">手机绑定</string>
    <string name="bindphone_inputnub">请输入手机号</string>
    <string name="bindphone_inputverification_code">请输入验证码</string>
    <string name="bindphone_getverification_code">获取验证码</string>
    <string name="bindphone_affirm">确认</string>

    <string name="home_item2_1">优秀作品展</string>
    <string name="home_item2_2">优秀案例产品</string>
    <string name="home_item3_1">推荐企业</string>
    <string name="home_item3_2">查看更多</string>
    <string name="home_item4_1">活动咨询</string>
    <string name="home_item4_2">查看全部</string>

    <string name="recruitmment_search_title">人才网</string>
    <string name="recruitmment_search_title_edit">搜索职位/公司/地区</string>

    <string name="history_search">历史搜索</string>
    <string name="searchend_title">搜索结果</string>

    <string name="showroom_title">展厅</string>

    <!--   消息界面 -->
    <string name="mes_title">消息</string>
    <string name="mes_title1">官方消息</string>
    <string name="mes_title2">作品互动</string>
</resources>
