<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.qyw.newdemo.app.activity.navuser.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bkg"
        >

    <include layout="@layout/title_blue"/>

    <LinearLayout
        android:id="@+id/setting_item1"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/setting_item1" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:background="@mipmap/ic_right_gray" />
    </LinearLayout>

  <LinearLayout
      android:id="@+id/setting_item2"
      android:layout_below="@id/setting_item1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
      android:gravity="center"
      >

        <TextView
            style="@style/text_black"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/setting_item2" />

      <ch.ielse.view.SwitchView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginRight="16dp"
          />

    </LinearLayout>

    <View
        android:id="@+id/setting_item_view1"
        android:layout_below="@id/setting_item2"
        style="@style/horizontal_divider_light"
        />
    <LinearLayout
        android:id="@+id/setting_item3"
        android:layout_below="@id/setting_item_view1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/setting_item3" />

        <TextView
            style="@style/text_black"
            android:text="1024M"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:background="@mipmap/ic_right_gray" />
    </LinearLayout>
    <View
        android:id="@+id/setting_item_view2"
        android:layout_below="@id/setting_item3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        />
    <LinearLayout
        android:id="@+id/setting_item4"
        android:layout_below="@id/setting_item_view2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/setting_item4" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:background="@mipmap/ic_right_gray" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_outuser"
            android:textSize="20sp"
            />

    </LinearLayout>



    </RelativeLayout>

</RelativeLayout>
