<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Android="http://schemas.android.com/tools"
    Android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_img"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        
        <LinearLayout
            android:id="@+id/username_ll"
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="phone"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="20sp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:hint="@string/login_username"
                android:textColorHint="@color/white"
                />
            <View
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:id="@+id/passwrod_ll"
            android:layout_below="@id/username_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="20sp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:hint="@string/login_password"
                android:textColorHint="@color/white"
                />
            <View
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_check"
            android:layout_below="@id/passwrod_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            >
            <TextView
                android:id="@+id/forget_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/login_forgetpassword"
                android:textColor="@color/white"

                />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                ></View>

            <TextView
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/login_regist"
                android:textColor="@color/white"
                />


        </LinearLayout>

        <com.qyw.newdemo.app.view.StateButton
            android:layout_below="@id/login_check"
            android:layout_centerHorizontal="true"
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
           android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:padding="10dp"
            android:text="@string/login_button"
            android:textColor="@color/white"
            app:normalBackgroundColor="@color/colorBackground"
            app:pressedBackgroundColor="@color/colorBackground"
            android:textSize="18sp"
            app:round="true"
            app:radius="2dp"
            />


    </RelativeLayout>


</FrameLayout>

