<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.qyw.newdemo.app.activity.navuser.ChangePasswordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bkg"
        >

    <include layout="@layout/title_blue"/>
    <LinearLayout
        android:id="@+id/changepwd_old_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/changepwd_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:textColor="@color/colorblack"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/changepassword_oldpwd"
            android:textColorHint="@color/gray"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/changepwd_newpwd_ll"
        android:layout_below="@id/changepwd_old_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/changepwd_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:textColor="@color/colorblack"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/changepassword_newpwd"
            android:textColorHint="@color/gray"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/changepwd_againpwd_ll"
        android:layout_below="@id/changepwd_newpwd_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/changepwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:textColor="@color/colorblack"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/changepassword_againpwd"
            android:textColorHint="@color/gray"
            />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changepassword_finish"
            android:textSize="20sp"
            />

    </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
