<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_main"
    android:background="@color/white"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray"
        />
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:id="@+id/nav_ll"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <LinearLayout
            android:id="@+id/home_nav1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/nav_img1"
                android:src="@mipmap/home_uncheck"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/nav_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title1"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:paddingBottom="5dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/home_nav2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/nav_img2"
                android:src="@mipmap/home_uncheck"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/nav_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title2"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:paddingBottom="5dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/home_nav3"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/nav_img3"
                android:src="@mipmap/home_uncheck"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/nav_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title3"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:paddingBottom="5dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/home_nav4"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/nav_img4"
                android:src="@mipmap/home_uncheck"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/nav_tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title4"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:paddingBottom="5dp"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/home_nav5"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/nav_img5"
                android:src="@mipmap/home_uncheck"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/nav_tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_title5"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:paddingBottom="5dp"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>