<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Android="http://schemas.android.com/tools"
    Android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

<include layout="@layout/title_white"/>


    <LinearLayout
        android:id="@+id/tel_ll"
        android:layout_marginTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="+86"
                android:textColor="@color/colorblack"
                android:textSize="20sp"
                android:layout_marginLeft="40dp"
                />
            <EditText
                android:id="@+id/et_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="phone"
                android:paddingBottom="5dp"
                android:textColor="@color/colorblack"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="20sp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="45dp"
                android:hint="@string/forget_tel"
                android:textColorHint="@color/gray"
                />
        </LinearLayout>

        <View
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/newpwd_ll"
        android:layout_below="@id/tel_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >
        <EditText
            android:id="@+id/et_newpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textPassword"
            android:paddingBottom="5dp"
            android:textColor="@color/colorblack"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="20sp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:hint="@string/forget_newpwd"
            android:textColorHint="@color/gray"
            />
        <View
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verifiction_code_ll"
        android:layout_below="@id/newpwd_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        >
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/et_verifiction_code"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="phone"
                android:layout_marginLeft="45dp"
                android:textColor="@color/colorblack"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:hint="@string/forget_verification_code"
                android:textColorHint="@color/gray"
                />
            <com.qyw.newdemo.app.view.StateButton
                android:layout_alignParentRight="true"
                android:layout_width="90dp"
                android:layout_height="38dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:text="@string/forget_check_get"
                android:textColor="@color/white"
                app:normalBackgroundColor="@color/colorBackground"
                app:pressedBackgroundColor="@color/colorBackground"
                android:textSize="16sp"
                app:round="true"
                app:radius="2dp"
                />

        </RelativeLayout>



        <View
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray"/>

    </LinearLayout>

    <com.qyw.newdemo.app.view.StateButton
        android:layout_below="@id/verifiction_code_ll"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:padding="10dp"
        android:text="@string/forget_finish"
        android:textColor="@color/white"
        app:normalBackgroundColor="@color/colorBackground"
        app:pressedBackgroundColor="@color/colorBackground"
        android:textSize="18sp"
        app:round="true"
        app:radius="2dp"
        />



</RelativeLayout>
