<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"


    tools:context="com.qyw.newdemo.app.activity.navuser.ChangePasswordActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bkg"
        >

        <include layout="@layout/title_blue"/>
        <LinearLayout
            android:id="@+id/input_phonenub"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="60dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:textColor="@color/colorblack"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/bindphone_inputnub"
                android:textColorHint="@color/gray"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_v_code"
            android:layout_below="@id/input_phonenub"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <EditText

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:textColor="@color/colorblack"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/bindphone_inputnub"
                android:textColorHint="@color/gray"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_bkg"
                android:layout_margin="5dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bindphone_getverification_code"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bindphone_affirm"
                android:textSize="20sp"
                />

        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
